fieldx/tests/uncompilable/1.77/unused_reader.stderr
error: method `read_tt` is never used
 --> tests/uncompilable/1.77/unused_reader.rs:3:1
  |
3 | #[fxstruct(sync)]
  | ^^^^^^^^^^^^^^^^^ method in this implementation
  |
note: the lint level is defined here
 --> tests/uncompilable/1.77/unused_reader.rs:5:46
  |
5 |     #[fieldx(lazy, reader(attributes_fn(deny(dead_code))))]
  |                                              ^^^^^^^^^
